--- a/assend/CSS/Style.css
+++ b/assend/CSS/Style.css
@@ -1,31 +1,46 @@
 :root{
-   
-    --color-text:#002057;
+    --hh: 90px;
+    --color-primary:#002057;
+    --color-secundary:#1a047eee;
+    --color-terciario:#7F19AF;
     --color-span:#940808;
     --color-bg:#F7F7F7;
+    --color-text:#000;
+   
     
 
-    --text-title:"Open Sans"
+    --text:"Poppins", sans-serif;
+    --text-p:"Nunito", sans-serif
+    --font-title-web:3.1em;
+    --font-title-mobil:2.3em;
+    --font-text-mobil:1.4em;
+    --font-text-web:1.5em;
+    --font-text:.9em;
+
+
+    --font-weight-1:800;
+    --font-weight-2:700;
+    --font-weight-3:600;
+    
+
 }
 
-html{
-    font-family: 'Open Sans';
-    font-family: 16px;
+html{ 
+    font-family: var(--text);
     box-sizing: border-box;
 }
 
-*, *::before,*::after{
+*, 
+*::before,
+*::after{
     box-sizing: inherit;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-}
-
 body{
+    margin: 0;
     background-color: var(--color-bg);
-    color: var(--color-text);
+    color: var(--color-primary);
+    font-family: "Poppins", sans-serif;
 }
 
 
@@ -35,15 +50,667 @@ ul{
     margin: 0;
 }
 
-.conteiner{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+
+img{
+    width: 100%;
+    height: inherit;
 }
 
-.btn{
+main{
+    overflow: hidden;
+}
+
+#particles-js{
+    color: green;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: -1;
+}
+
+.container {
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 0 16px;
+}
+  
+a, .btn {
     background-color: transparent;
-    border:none;
+    border: none;
     cursor: pointer;
+    text-decoration: none;
+}
+
+main{
+    background-color: var(--color-primary);
+}
+
+.section {
+    width: 100%;
+    padding: 100px 0 0px;
     
 }
+
+.section-title{
+    color: #fff;
+    text-align: center;
+    font-size: var(--font-text-web);
+}
+
+
+.section-span{
+    color: var(--color-terciario);
+}
+
+
+  
+  /* Header */
+  .header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: var(--hh);
+    background-color: var(--color-bg);
+    /* [offset-x] [offset-y] [blur-radius] [spread-radius] [color] */
+    box-shadow: 0 5px 10px 2px #0000002c;
+    /* auto* | integer */
+    z-index: 1;
+  }
+  
+  /* Navigation */
+  .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: inherit;
+  }
+  
+  .logo {
+    color: var(--color-primary);
+    font-size: 24px;
+    font-weight: 700;
+    text-decoration: none;
+    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+  }
+  
+  .logo__icon {
+    color: var(--color-primary);
+    font-size: 40px;
+  }
+  
+  .nav__list {
+    display: flex;
+    gap: 32px;
+  }
+  
+  .nav__link {
+    text-decoration: none;
+    font-size: 20px;
+    color: var(--color-primary);
+    font-weight: 600;
+    transition: color .3s;
+  }
+  
+  .nav__link:hover {
+    color: var(--color-primary)
+  }
+
+  .btn--close{
+    display: none;
+  }
+  
+  .btn--open {
+    color: var(--color-text);
+    font-size: 32px;
+    display: flex;
+  }
+
+
+  .hero__contents{
+    width: 100%;
+    margin: 10px auto;
+    display:flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
+.hero__content{
+    margin-bottom:20px;
+}
+
+
+
+.hero__title{
+    font-size:var(--font-title-mobil);
+    font-weight: var(--font-weight-1);
+}
+
+.hero__title_name{
+    color:var(--color-span);
+}
+
+.hero__description{
+    font-size: var(--font-text-mobil);
+    font-weight: var(--font-weight-2);
+    color: var(--color-text);
+
+}
+
+.hero__dev{
+    color: var(--color-span);
+    gap: 2.5rem;
+}
+
+.btn__hero{
+    background-color: var(--color-secundary);
+    font-family: var(--text);
+    font-size: var(--color-text);
+    color: #fff;
+    padding: 10px 30px;
+    font-weight: 700;
+    border-radius: 25px;
+    box-shadow: 1px 1px 1px .01px var(--color-secundary);
+    cursor: pointer;
+    transition: color .3s;
+    
+}
+
+.btn__hero:hover{
+    background-color: #000;
+}
+.hero__content-link{
+
+    display: flex;
+    padding-right: 10px;
+    padding-top: 10px;
+
+}
+
+.btn-link{
+    background-color: #000;
+    color: rgba(23, 221, 221, 0.815);
+    text-decoration: none;
+    display: flex;
+    cursor: pointer;
+    border-radius: 50%;
+    font-size: var(--font-text-mobil);
+    padding: 8px;
+    margin: 3px;
+    align-items: flex-start;
+}
+
+.btn__linkedin{
+    transition: color .3s;
+}
+
+.btn__linkedin:hover{
+    background-color: #0cb3be;
+    color: wheat;
+}
+
+.btn__github{
+    transition: color .3s;
+}
+
+.btn__github:hover{
+    background-color: #000;
+    color: wheat;
+}
+.btn__facebook{
+    transition: color .3s;
+}
+
+.btn__facebook:hover{
+    background-color: #0cb3be;
+    color: wheat;
+}
+
+.btn__whatsapp{
+    transition: color .3s;
+}
+
+.btn__whatsapp:hover{
+    background-color: rgb(32, 204, 32);
+    color: wheat;
+}
+.hero__foto{
+    width: 250px;
+    height: 250px;
+}
+
+.hero__foto img{
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px ;
+}
+
+.wave__content{
+    position: absolute;
+    bottom: 0;
+    color: var(--color-primary);    
+}
+
+.about{
+    color: var(--color-bg);
+}
+
+.about__content{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.about__foto{
+    margin: 0 auto;
+    max-width: 300px;
+    height: 300px;
+    border-radius: 10%;
+    overflow: hidden;
+}
+
+
+.about__title{
+    color: #000;
+    font-weight: var(--font-weight-3);
+    font-weight: 700;
+}
+
+.about__text{
+    padding: 20px;
+}
+
+.about__parrafo{
+    font-size: var(--text-p);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: justify;
+}
+.about-span{
+    color: #0cb3be;
+}
+
+.btn__about{
+    color: #fff;
+    background-color: var(--color-terciario);
+    padding: 15px 40px;
+    border-radius: 10px;
+    margin:40px 0px;
+    width: 800;
+    transition:background-color .3s ;
+}
+
+.btn__about:hover{
+    background-color: #000;
+}
+
+.about__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: bottom;
+    border-radius: 20px;
+    transform: scale(1);
+    transition: transform .3s;
+    filter: grayscale(100%);
+    
+}
+
+.about__foto:hover .about__img {
+    transform: scale(1.2);
+    filter: grayscale(0%);;
+  }
+
+/*portafolio*/
+.portafolio{
+    padding: 50px 0;
+    color: #fff;
+}
+
+.portafolio-proyects{
+    display: flex;
+    flex-direction: column;
+    gap: var(--font-title-mobil);
+}
+
+.proyect-content{
+    padding: 0 20px 20px;
+}
+
+.proyect-title{
+    font-size: 1.5rem;
+}
+.proyect-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: inherit;
+}
+
+
+.proyect-link{
+    background-color: var(--color-terciario);
+    padding: 7px 12px;
+    border-radius: 7px;
+    margin:0px 20px 50px;
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #fff;
+    transition: background-color .3s;
+}
+
+.proyect-link:hover{
+    background-color: #000;
+}
+
+  
+.habilidades__cards {
+    width: 85%; 
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+    border: 1px solid #fff;
+    background-color: #33026ee5;
+    padding: 40px 0;
+
+  }
+  
+  .card {
+    border-radius: 10px ;
+    font-weight: 700;
+    position: relative;
+    margin: auto;
+    text-align: center;
+    background-color: #05001fa9;
+    
+  }
+  
+  .btn-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
+    padding: 10px;
+    border: 1px solid #ccc;
+
+    border-radius: 5px;
+    transition:  background-color .3s;
+  }
+  
+  .btn-card:hover{
+    background-color:#05000B ;
+  }
+  
+
+  .card a i {
+    font-size: 90px;
+  }
+  
+  .card a span {
+    color: #fff;
+    font-size: 14px;
+  }
+
+.contact{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.contact-form{
+    background-color: #fbffff;
+    border-radius: 10px;
+    gap: 10px;
+    text-align: center;
+}
+
+
+
+.contact-img{
+    margin: 0 auto;
+    max-width: 300px;
+    height: 300px;
+    overflow: hidden;
+}
+
+.contact-img img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: bottom;
+  border-radius: 10px;   
+}
+
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    width: 450px;
+    margin: auto;
+    padding: 0px 20px;
+    box-sizing: border-box;
+    border: 1px solid #000;
+    border-radius: 7px;
+    margin-bottom: 30px 0px;
+}
+
+input, textarea{
+    width: 100%;
+    padding: 7px ;
+    font-size: 15px;
+    border: 1px solid #000;
+    border-radius:10px;
+    margin-bottom: 20px;
+    outline: 0px;
+    margin: auto;
+    box-sizing: border-box;
+}
+
+textarea{
+
+    min-height: 140px;
+    max-height: 150px;
+    max-width: 100%;
+}
+
+.btn-enviar{
+    display: flex;
+    align-items: flex-end;
+    padding: 15px;
+    font-size: 16px;
+    outline: 0px;
+    background-color: var(--color-secundary);
+    color: #fff;
+    font-weight: 700;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: background-color .3s ;
+    margin-bottom: 20px;
+    
+}
+
+.btn-enviar:hover{
+    background-color: #000;
+}
+
+.footer-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.logo-footer{ 
+    display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 50px;
+}
+
+.nav-footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 700;
+}
+
+.footer-contacto{
+    font-size: var(--font-text);
+}
+
+.footer-text{
+    color: var(--color-primary);
+    font-size: var(--font-text);
+    font-weight: 400;
+}
+
+
+  @media (max-width: 900px) {
+    .nav__menu {
+      position: fixed;
+      width: 85%;
+      background-color: #222;
+      padding: 60px 40px;
+  
+      top: 90px;
+      right: -100%;
+      bottom: 0;
+      transition: right .3s;
+    }
+  
+    .show--menu {
+      right: 0;
+    }
+  
+    .btn--close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      color: #fff;
+      font-size: 32px;
+      display: flex;
+    }
+  
+    .nav__link {
+      color: #fff;
+    }
+  
+    .nav__list {
+      flex-direction: column;
+    }
+
+}
+
+ @media (min-width: 900px) {
+    .btn--close {
+        display: none;
+    }
+      
+     .btn--open {
+        display: none;
+    }
+} 
+
+@media (min-width:670px) {
+    .hero__contents {
+        flex-direction: row ;
+        justify-content: space-around;
+       
+    }
+    
+    .about__content{
+        flex-direction: row;
+        justify-content: space-around;
+        text-align: center;
+    }
+
+    .about__text{
+        width: 50%;
+    }
+    .about__foto{
+        width: 50%;
+    }
+
+    
+    .proyect{
+        display: flex;
+        align-items: center;
+        padding: 10px;
+    }
+
+    .proyect__img{
+        width: 50%;
+        height: 400px;
+    }
+
+    .proyect__img img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 25px;
+        overflow: hidden;
+    }
+
+    .proyects .proyect:nth-child(even){
+        flex-direction: row-reverse;
+    }
+
+    .proyect-content{
+        width: 50%;
+        flex-direction: column;
+    }
+
+    .footer{
+        display: flex;
+        max-height:300px;
+        margin: auto ;
+        justify-content: space-around;
+    }
+
+    .footer-container{
+        display: flex;
+        flex-direction: row; /* Cambiamos la dirección de columna a fila */
+        align-items: center; /* Hace que los items se estiren para ajustarse a la altura del contenedor */
+        border: 1px solid #ccc;
+        justify-content: space-between;
+    }
+
+}
+
+
+@media(max-width: 480px){
+    form{
+        width: 100%;
+    }
+}
+
+@media (min-width: 1024px) {
+    .about__foto{ 
+        max-width: 375px;
+        height: 375px;
+    }
+
+    .header,
+    .container,
+    .about,
+    .portafolio,
+    .habilidades,
+    .contact,
+    .footer{
+        margin: 0 auto;
+    }
+
+
+
+}
+
+  
